# instrew

./: .gitignore  .gitmodules  Dockerfile  README.md  build.sh  meson.build
.builds/: llvm11-aarch64-debian.yaml  llvm11-x86_64-alpine.yaml  llvm13-x86_64-debian.yaml  llvm13-x86_64-debian.yml  llvm15-aarch64-debian.yaml  llvm15-x86_64-debian.yaml  llvm15-x86_64-debian.yml  llvm17-x86_64-debian.yml
.github/workflows/: ci.yml  release.yml
client/: common.h  dispatch.c  dispatch.h  dispatcher-info.h  elf-loader.c  elf-loader.h  emulate.c  emulate.h  main.c  math.c  memory.c  memory.h  memset-aarch64.S  meson.build  minilibc.c  plt.inc  rtld.c  rtld.h  state.h  translator.c  translator.h
server/: cache.cc  cache.h  callconv.cc  callconv.h  codegenerator.cc  codegenerator.h  config.cc  config.h  config.inc  connection.cc  connection.h  decode.cc  decode.h  meson.build  optimizer.cc  optimizer.h  rewriteserver.cc  version.cc.in  version.h
shared/: instrew-protocol.inc
test/: meson.build
test/aarch64/: exit.S  fork.S  meson.build  recursion.S
test/x86_64/: call-pop.S  call-ret-mismatch.S  exit.S  fork.S  meson.build  nowrite.S  recursion.S
tool-api/: instrew-api.h  meson.build
tool-none/: meson.build  none.cpp
tools-simple/: icount.cpp  meson.build  none.cpp  strace.cpp
