shared_library('tool-none', 'none.cpp',
               name_prefix: '',
               dependencies: [instrew_api],
               install: true,
               install_dir: get_option('libdir')/'instrew')
shared_library('tool-icount', 'icount.cpp',
               name_prefix: '',
               dependencies: [instrew_api],
               install: true,
               install_dir: get_option('libdir')/'instrew')
